# ofgpu_multi

./: README.md~  TODO  TODO~
src/: CMakeLists.txt  README.txt
src/ofgpu/: CMakeLists.txt  index.h  ofgpuconfig.cu  ofgpuconfig.h  ofgpuexport.h  pbicg.cu  pbicg.h  pcg.cu  pcg.h  real.h  solvertelemetry.h  sparsematrixargs.h  sparsematrixsystem.cu  sparsematrixsystem.h  the.h
